// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Async Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-4lk8tm-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Sync Action
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-4lk8tm-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Async Action
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Colors 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-19fxgjm-Button"
        data-testid="button"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-nz7rb5-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Red 600
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1s4qos3-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Magenta 200
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-54uhic-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1rg7573-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-4lk8tm-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1kzvidy-Button"
        data-testid="button"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-13finl0-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1iovcze-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-4lk8tm-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-11vz8yb-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-3r6zap-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-l730ys-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-54uhic-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-5zv1of-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-54uhic-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-uao30q-Button"
          >
            Hello world
          </span>
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-54uhic-Button"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-1qy2jjj-Button"
          >
            Hello world
          </span>
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-1tlu3zc-Button"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="css-1xr6sam-Button"
    >
      <span
        className="css-l730ys-Button"
      >
        change me!
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-54uhic-Button"
        data-testid="button-size-lg"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-5zv1of-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1rg7573-Button"
        data-testid="button-size-md"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-5zv1of-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-4lk8tm-Button"
        data-testid="button-size-sm"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="css-5zv1of-Button"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-1e3j1b5-Button"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="css-1xr6sam-Button"
    >
      <span
        className="css-l730ys-Button"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-54uhic-Button"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="css-1xr6sam-Button"
    >
      <span
        className="css-l730ys-Button"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Transparent Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="css-149enxm-Button"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="css-1xr6sam-Button"
    >
      <span
        className="css-l730ys-Button"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;
